# physical-ai-robotics-textbook

./: .env.example  .gitignore  CLAUDE.md  HOMEPAGE_REDESIGN_SUMMARY.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: ROUTING.md
.claude/agents/: chatkit-fastapi-integrator-agent.md  curriculum-author-agent.md  docusaurus-architect-agent.md  qa-validation-agent.md  rag-pipeline-engineer-agent.md  technical-accuracy-reviewer-agent.md
.claude/commands/: sp.specify.md
.github/: README.md
.github/workflows/: deploy.yaml  deploy.yml  documentation-quality.yml  module-3-validation.yml  pr-validation.yml  sdd-validation.yml
.specify/: README.md
.specify/memory/: constitution.md
auth-next/: package-lock.json  package.json
auth-service/: .env.example  package-lock.json  package.json
auth-service/src/: auth.ts  env.ts  server.ts
backend/: __init__.py  config.py  dependencies.py  main.py
backend/db/: migrate.py  pool.py  queries.py
backend/migrations/: 001_create_tables.sql  002_auth_onboarding.sql  003_anon_migration_function.sql
backend/models/: api_models.py  errors.py  profile.py
backend/routers/: auth_migration.py  chat.py  health.py  profile.py  sessions.py
backend/services/: chat_service.py  profile_service.py  rate_limiter.py  retrieval_router.py  session_service.py
rag/: __init__.py  cli.py  config.py  models.py  url_builder.py
rag/chunker/: heading_chunker.py  (+2 more)
tests/: conftest.py
website/: HOMEPAGE_REDESIGN.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  tailwind.config.js  tsconfig.json
(+728 files in other folders)
